# pytorch-transformer

./: LICENSE  README.md  pyproject.toml
data/: loader.py  tokenizer.py
models/: bigram.py  discriminator.py  generator.py  modules.py  transformer.py
models/attention/: bag_of_words.py  self_attention.py  self_attention_notes.py
training/: adversarial.py  autoreg.py  eval.py  train.py
